--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Магазин выпечки</title>
-    <meta name="description" content="Лучшая выпечка в городе"> 
+    <meta name="description" content="Лучшая выпечка в городе">
 </head>
 <body>
 
     <header>
         <img src="img/01-Logo.svg" alt="Изображение логотипа">
     </header>
-   
     <nav>
         <ul >
             <li> <a href="#">О НАС</a></li>
@@ -22,20 +21,26 @@
             <li> <a href="#">КОНТАКТЫ</a></li>
         </ul>
     </nav>
-   
     <main>
         <section class="section-about">
-            
+            <div class="section-about__block">
+                <div class="section-about__border">
+                    <h1 class="section-about__title">Специальный заказ</h1>
+                    <p class="section-about__text">Задача организации, в особенности же постоянный количественный рост и сфера нашей активности позволяет оценить значение существенных финансовых и административных условий. Равным образом новая модель организационной деятельности требуют определения и уточнения форм развития.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section-description">
+            <div class="section-description__icon-box">
+                <img src="icons/01-Иконка.svg" alt="">
+                <img src="icons/02-Иконка.svg" alt="">
+                <img src="icons/03-Иконка.svg" alt="">
+            </div>
         </section>
         <section></section>
-        <section></section>
     </main>
-   
     <footer>
         <nav></nav>
     </footer>
-
-
-
 </body>
 </html>
