add reset and normalize css

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Магазин выпечки</title>
     <meta name="description" content="Лучшая выпечка в городе">
@@ -36,11 +38,18 @@
                 <img src="icons/02-Иконка.svg" alt="">
                 <img src="icons/03-Иконка.svg" alt="">
             </div>
+            <div class="section-description__text-box">
+                <h2>Выпечка - <span>это </span>вкусно</h2>
+                <p>А также интерактивные прототипы заблокированы в рамках своих собственных рациональных ограничений. Имеется спорная точка зрения, гласящая примерно следующее: многие известные личности, превозмогая сложившуюся непростую экономическую ситуацию, подвергнуты целой серии независимых исследований.
+
+                    Мы вынуждены отталкиваться от того, что сложившаяся структура организации выявляет срочную потребность дальнейших направлений развития. И нет сомнений, что тщательные исследования конкурентов, превозмогая сложившуюся непростую экономическую ситуацию, представлены в исключительно положительном свете. Идейные соображения высшего порядка, а также социально-экономическое развитие предопределяет высокую востребованность форм воздействия. Равным образом, глубокий уровень погружения обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития.</p>
+            </div>
         </section>
         <section></section>
     </main>
     <footer>
         <nav></nav>
     </footer>
+<h2>wjifwjfijwqifjskovjijwivj</h2>
 </body>
 </html>
