--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,6 @@
     <footer>
         <nav></nav>
     </footer>
-<h2>wjifwjfijwqifjskovjijwivj</h2>
+<h2>Изменения сделанные на пк</h2>
 </body>
 </html>
