--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.679115492084!2d44.758330775284605!3d43.23718697112495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40506edeeffb394f%3A0x7b72b2a08a63e041!2z0J_QtdC60LDRgNC90Y8gItCm0LXRh9C-0LXQstGB0LrQuNC5INGF0LvQtdCxIi4!5e0!3m2!1sru!2sru!4v1729603632896!5m2!1sru!2sru" width="900" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         </section>
     </main>
-    <!-- <footer>
+    <footer>
         <hr>
         <nav>
             <ul >
@@ -65,6 +65,6 @@
             <li> <a href="#">КОНТАКТЫ</a></li>
         </ul>
         </nav>
-    </footer> -->
+    </footer>
 </body>
 </html>
